story 11 incomplete mais la story 12 fini et debut de la doc

--- a/ProjetDepart/form.html
+++ b/ProjetDepart/form.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div>
-            <a class="button-menu" href="./ProjetDepart/index.html">Cours en ligne</a>
+            <a class="button-menu" href="index.html">Cours en ligne</a>
         </div>
     </header>
     <div class="form">
@@ -35,7 +35,7 @@
                 <input name="carteBancaire" class="carteBancaire input" type="number" placeholder="Carte Bancaire" required>
             </div>
             <div id="buttons">
-                <a class="button" href="./ProjetDepart/index.html">Annuler</a>
+                <a class="button" href="index.html">Annuler</a>
                 <input class="button submitButton" type="submit" value="Valider" />
             </div>
         </form>
