--- a/ProjetDepart/index.html
+++ b/ProjetDepart/index.html
@@ -35,6 +35,7 @@
                   <tbody></tbody>
                 </table>
                 <a href="#" id="empty-cart" class="button u-full-width">Vider le panier</a>
+                <a href="form.html" class="button u-full-width">Valider le panier</a>
               </div>
             </li>
           </ul>
